--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,6 @@
-body {
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap');
 
+body {
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
 }
