markers on the map

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,3 +7,12 @@ body {
     margin: 0;
     padding: 0;
 }
+
+.marker {
+    background-image: url('marker.png');
+    background-size: cover;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    cursor: pointer;
+}
