current marker location in svelte stores

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,8 +9,7 @@ body {
 }
 
 .marker {
-    background-image: url('marker.png');
-    background-size: cover;
+    background-color: red;
     width: 24px;
     height: 24px;
     border-radius: 50%;
